// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cards Components renders AreaAboutMe properly 1`] = `
<div
  class="sc-eCImPb eHGOl"
>
  Teste
</div>
`;

exports[`Cards Components renders AreaTextAboutMe properly 1`] = `
<div
  class="sc-gKclnd gEWgJk"
>
  Teste
</div>
`;

exports[`Cards Components renders Cards properly 1`] = `
<div
  class="sc-gsDKAQ bRjtMs"
>
  Teste
</div>
`;

exports[`Cards Components renders ContainerCards properly 1`] = `
<div
  class="sc-bdvvtL cYdABq"
>
  Teste
</div>
`;

exports[`Cards Components renders WorkTools properly 1`] = `
<div
  class="sc-hKwDye jUaoSO"
>
  Teste
</div>
`;
